Fix pt-BR translation

--- a/UI/data/locale/pt-BR.ini
+++ b/UI/data/locale/pt-BR.ini
@@ -418,7 +418,7 @@ ScaleFiltering="Filtragem de escala"
 ScaleFiltering.Point="Ponto"
 ScaleFiltering.Bicubic="Bicúbico"
 ScaleFiltering.Area="Área"
-BlendingMethod="Moétodo de Mesclagem"
+BlendingMethod="Método de Mesclagem"
 BlendingMethod.Default="Padrão"
 BlendingMethod.SrgbOff="SRGB desligado"
 BlendingMode="Modo de Mesclagem"
@@ -894,7 +894,7 @@ Basic.Settings.Audio.UnknownAudioDevice="[Dispositivo desconectado ou indisponí
 Basic.Settings.Audio.Disabled="Desativado"
 Basic.Settings.Audio.LowLatencyBufferingMode="Modo de buffer de áudio de baixa latência (para saídas Decklink/NDI)"
 Basic.Settings.Audio.LowLatencyBufferingWarning.Enabled="AVISO: buffer de áudio de baixa latência está ativado."
-Basic.Settings.Audio.LowLatencyBufferingWarning="Modo de buffer de áudio de baixa latência pode causar falhas no audio ou parar a reprodução de algumas fontes."
+Basic.Settings.Audio.LowLatencyBufferingWarning="Modo de buffer de áudio de baixa latência pode causar falhas no áudio ou parar a reprodução de algumas fontes."
 Basic.Settings.Audio.LowLatencyBufferingWarning.Title="Ativar modo de buffer de baixa latência de áudio?"
 Basic.Settings.Audio.LowLatencyBufferingWarning.Confirm="Tem certeza que deseja ativar o modo de buffer de áudio de baixa latência?"
 Basic.Settings.Accessibility="Acessibilidade"
